# magtek_cr_switch

./: CMakeLists.txt  README.ubuntu
include/: magtek_cr_switch.h
src/: main.c
